2008-12-16  Ryan Lortie  <desrt@desrt.ca>

	Bug 562955 – parallel build doesn't work

	* common/Makefile.am: use non-absolute path for libgvfscommon.la so
	that automake can see the dependency

2008-12-16  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c (trash_backend_add_info): add
	trash::orig-path and trash::deletion-date info

2008-12-15  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.2 ===

2008-12-15  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c:
	* daemon/gvfsbackendtrash.h: relicense to LGPLv2+

2008-12-15  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendtrash.c:
	* daemon/trashlib/Makefile.am:
	Fix dist issues

2008-12-15  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	Fix memory leaks on trash backend

	* daemon/trashlib/trashdir.c:
	* daemon/trashlib/trashexpunge.c:
	* daemon/trashlib/trashitem.c:
	* daemon/trashlib/trashwatcher.c: fix memory leaks
	* daemon/gvfsbackendtrash.c: fix leaks; split enumerate into two
	functions (one for the root, one for the non-root case)

2008-12-12  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	(ftp_connection_ensure_data_connection_pasv):
	Fix successful PASV connections (don't try to apply workaround).
	(fixes #564027)

2008-12-11  Ryan Lortie  <desrt@desrt.ca>

	Implement pull support on trash backend.

	* daemon/trashlib/trashitem.[ch]: add support for restoring items
	* daemon/gvfsbackendtrash.c: implement pull

2008-12-11  Ryan Lortie  <desrt@desrt.ca>

	New trash:/ backend.

	* daemon/trashlib: implementation of the reader side of the fd.o
	trash specification
	* daemon/gvfsbackendtrash.[ch]: rewrite based on trashlib
	* configure.ac: add daemon/trashlib/Makefile to output
	* daemon/Makefile.am: add trashlib/ subdir and include in trash
	backend libraries
